--- a/src/main/resources/creative_project/User_Main.fxml
+++ b/src/main/resources/creative_project/User_Main.fxml
@@ -4,27 +4,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane fx:id="sp_user_main" maxWidth="1015.0" minHeight="582.0" minWidth="999.0" prefHeight="663.0" prefWidth="999.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.User_Main">
-    <content>
-        <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1000.0" minWidth="1000.0" prefHeight="665.0" prefWidth="1000.0">
+<AnchorPane fx:id="_user_main" maxWidth="1348.0" minHeight="582.0" minWidth="999.0" prefHeight="653.0" prefWidth="1015.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.User_Main">
+    <children>
+        <AnchorPane layoutY="-1.0" maxHeight="1.7976931348623157E308" maxWidth="1060.0" minWidth="1000.0" prefHeight="654.0" prefWidth="1015.0">
             <children>
-                <Line endX="307.0" layoutX="409.0" layoutY="78.0" startX="-125.0" />
-                <Text layoutX="404.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OutDoorGram" textAlignment="CENTER">
+                <Line endX="307.0" layoutX="416.0" layoutY="72.0" startX="-125.0" />
+                <Text layoutX="411.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OutDoorGram" textAlignment="CENTER">
                     <font>
                         <Font size="30.0" />
                     </font>
                 </Text>
-                <BorderPane fx:id="bp_user_sub" layoutX="45.0" layoutY="145.0" maxWidth="910.0" minHeight="442.0" minWidth="910.0" prefHeight="442.0" prefWidth="910.0">
-               </BorderPane>
-            <ToolBar layoutX="325.0" layoutY="93.0" prefHeight="45.0" prefWidth="360.0" style="-fx-background-color: #E0E0E0;">
+            <ToolBar layoutX="332.0" layoutY="87.0" prefHeight="45.0" prefWidth="360.0" style="-fx-background-color: #E0E0E0;">
               <items>
                   <AnchorPane prefHeight="30.0" prefWidth="346.0">
                      <children>
@@ -52,11 +48,16 @@
                   </AnchorPane>
               </items>
             </ToolBar>
-            <Button fx:id="btn_logout" layoutX="653.0" layoutY="40.0" mnemonicParsing="false" onAction="#logout" text="로그아웃" />
+            <Button fx:id="btn_logout" layoutX="660.0" layoutY="34.0" mnemonicParsing="false" onAction="#logout" text="로그아웃" />
+            <AnchorPane layoutX="16.0" layoutY="166.0" prefHeight="462.0" prefWidth="982.0">
+               <children>
+                      <AnchorPane fx:id="ap_user_sub" layoutX="1.0" layoutY="6.0" maxWidth="968.0" minHeight="341.0" minWidth="668.0" prefHeight="450.0" prefWidth="968.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="6.0" />
+               </children>
+            </AnchorPane>
             </children>
         </AnchorPane>
-    </content>
+    </children>
     <padding>
         <Insets bottom="40.0" />
     </padding>
-</ScrollPane>
+</AnchorPane>
