--- a/src/main/resources/creative_project/Add_Review.fxml
+++ b/src/main/resources/creative_project/Add_Review.fxml
@@ -2,30 +2,28 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="457.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Add_Review">
 
     <children>
-        <Label layoutX="283.0" layoutY="29.0" text="이용내역" AnchorPane.bottomAnchor="356.6" AnchorPane.leftAnchor="283.0" AnchorPane.rightAnchor="269.0" AnchorPane.topAnchor="29.0" />
-        <TabPane fx:id="tp_use_list" layoutX="186.0" layoutY="88.0" prefHeight="209.0" prefWidth="248.0" tabClosingPolicy="UNAVAILABLE">
+        <Label layoutX="283.0" layoutY="-7.0" text="이용내역" AnchorPane.bottomAnchor="392.6" AnchorPane.leftAnchor="283.0" AnchorPane.rightAnchor="269.0" AnchorPane.topAnchor="-7.0" />
+        <TabPane fx:id="tp_use_list" layoutX="84.0" layoutY="88.0" prefHeight="210.0" prefWidth="446.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
                 <Tab fx:id="tab_playland" text="관광지">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="173.0" prefWidth="270.0">
                      <children>
-                        <TableView fx:id="tv_use_playland" prefHeight="176.0" prefWidth="246.0">
+                        <TableView fx:id="tv_resultView_playland" layoutY="3.0" prefHeight="176.0" prefWidth="446.0">
                           <columns>
-                            <TableColumn fx:id="tc_use_playlandname" prefWidth="138.39997100830078" text="관광지명" />
-                            <TableColumn fx:id="tc_use_plalanddate" prefWidth="108.800048828125" text="이용날짜" />
-                              <TableColumn prefWidth="103.99993896484375" />
+                            <TableColumn fx:id="tc_playland_name" prefWidth="124.79998779296875" text="관광지명" />
+                              <TableColumn fx:id="tc_plaland_address" prefWidth="268.0" text="주소" />
                           </columns>
                         </TableView>
                      </children></AnchorPane>
@@ -35,31 +33,30 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                         <children>
-                            <TableView fx:id="tv_use_food" prefHeight="176.0" prefWidth="246.0">
+                            <TableView fx:id="tv_resultView_food" prefHeight="176.0" prefWidth="446.0">
                                 <columns>
-                                    <TableColumn fx:id="tc_use_foodname" prefWidth="138.39997100830078" text="음식점명" />
-                                    <TableColumn fx:id="tc_use_fooddate" prefWidth="108.800048828125" text="이용날짜" />
-                                    <TableColumn prefWidth="103.99993896484375" />
+                                    <TableColumn fx:id="tc_food_name" prefWidth="124.79998779296875" text="음식점명" />
+                                    <TableColumn fx:id="tc_food_address" prefWidth="268.0" text="주소" />
                                 </columns>
                             </TableView>
-                        </children> </AnchorPane>
+                        </children>
+                        </AnchorPane>
                     </content>
                 </Tab>
             </tabs>
         </TabPane>
-        <Label layoutX="188.0" layoutY="303.0" text="평점" />
-        <Label layoutX="187.0" layoutY="331.0" text="후기" />
-        <TextArea fx:id="ta_use_review" layoutX="217.0" layoutY="330.0" prefHeight="87.0" prefWidth="157.0" />
-        <Button fx:id="btn_add_use_list" layoutX="384.0" layoutY="393.0" mnemonicParsing="false" onAction="#add_use_list" prefHeight="22.0" prefWidth="48.0" text="등록" />
-      <MenuButton fx:id="mb_score" layoutX="217.0" layoutY="299.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="69.0" text="선택">
-        <items>
-          <MenuItem fx:id="menu_1" mnemonicParsing="false" onAction="#add_1" text="1점" />
-          <MenuItem fx:id="menu_2" mnemonicParsing="false" onAction="#add_2" text="2점" />
-            <MenuItem fx:id="menu_3" mnemonicParsing="false" onAction="#add_3" text="3점" />
-            <MenuItem fx:id="menu_4" mnemonicParsing="false" onAction="#add_4" text="4점" />
-            <MenuItem fx:id="menu_5" mnemonicParsing="false" onAction="#add_5" text="5점" />
-        </items>
-      </MenuButton>
+        <Label layoutX="205.0" layoutY="402.0" text="평점" />
+        <Label layoutX="40.0" layoutY="308.0" text="후기" />
+        <TextArea fx:id="ta_review" layoutX="84.0" layoutY="300.0" prefHeight="87.0" prefWidth="446.0" />
+        <Button fx:id="btn_add" layoutX="384.0" layoutY="398.0" mnemonicParsing="false" onAction="#add_review" prefHeight="22.0" prefWidth="48.0" text="등록" />
+      <Label layoutX="84.0" layoutY="64.0" text="이름" />
+      <TextField fx:id="tf_name" layoutX="118.0" layoutY="60.0" prefHeight="22.0" prefWidth="90.0" promptText="관광지,음식점" />
+      <Label layoutX="217.0" layoutY="64.0" text="도" />
+      <TextField fx:id="tf_state" layoutX="238.0" layoutY="60.0" prefHeight="22.0" prefWidth="90.0" promptText="도" />
+      <Label layoutX="339.0" layoutY="64.0" text="시" />
+      <TextField fx:id="tf_city" layoutX="363.0" layoutY="60.0" prefHeight="22.0" prefWidth="90.0" promptText="시" />
+      <Button fx:id="btn_search" layoutX="476.0" layoutY="60.0" mnemonicParsing="false" onAction="#view_result_search" prefHeight="22.0" prefWidth="48.0" text="검색" />
+      <TextField fx:id="tf_rate" layoutX="255.0" layoutY="398.0" prefHeight="22.0" prefWidth="90.0" />
 
 
     </children>
