--- a/src/main/resources/creative_project/Information_Food.fxml
+++ b/src/main/resources/creative_project/Information_Food.fxml
@@ -1,43 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="405.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Information_Food">
-        <children>
-            <MenuButton fx:id="mb_information_Do" layoutX="11.0" layoutY="30.0" mnemonicParsing="false" text="도 선택">
-                <items>
-                    <MenuItem mnemonicParsing="false" text="경상북도" />
-                    <MenuItem mnemonicParsing="false" text="전라남도" />
-                </items>
-            </MenuButton>
-            <MenuButton fx:id="mb_information_Si" layoutX="96.0" layoutY="30.0" mnemonicParsing="false" text="시 선택">
-                <items>
-                    <MenuItem mnemonicParsing="false" text="대구시" />
-                    <MenuItem mnemonicParsing="false" text="남원시" />
-                </items>
-            </MenuButton>
-            <TextField fx:id="tf_search_food" layoutX="407.0" layoutY="30.0" promptText="음식점명, 관광지 분류, 등등" />
-            <Button fx:id="btn_search_food" layoutX="576.0" layoutY="30.0" mnemonicParsing="false" onAction="#view_search_food" text="검색" />
-      <ScrollPane layoutY="77.0" prefHeight="399.0" prefWidth="624.0">
-         <content>
-                  <TableView fx:id="tv_information_food" prefHeight="384.0" prefWidth="624.0">
-                      <columns>
-                          <TableColumn fx:id="tc_food_name" prefWidth="99.20001220703125" text="상호명" />
-                          <TableColumn fx:id="tc_food_address" prefWidth="137.80001831054688" text="주소" />
-                          <TableColumn fx:id="tc_food_best" prefWidth="110.19998168945312" text="대표 음식" />
-                          <TableColumn fx:id="tc_food_score" minWidth="0.0" prefWidth="60.0" text="평점" />
-                  <TableColumn fx:id="tc_food_review" prefWidth="201.5999755859375" text="리뷰" />
-                      </columns>
-                  </TableView>
-         </content>
-      </ScrollPane>
-        </children>
+<!--<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="405.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Information_Food">-->
+<!--        <children>-->
+<!--            <MenuButton fx:id="mb_information_Do" layoutX="11.0" layoutY="30.0" mnemonicParsing="false" text="도 선택">-->
+<!--                <items>-->
+<!--                    <MenuItem mnemonicParsing="false" text="경상북도" />-->
+<!--                    <MenuItem mnemonicParsing="false" text="전라남도" />-->
+<!--                </items>-->
+<!--            </MenuButton>-->
+<!--            <MenuButton fx:id="mb_information_Si" layoutX="96.0" layoutY="30.0" mnemonicParsing="false" text="시 선택">-->
+<!--                <items>-->
+<!--                    <MenuItem mnemonicParsing="false" text="대구시" />-->
+<!--                    <MenuItem mnemonicParsing="false" text="남원시" />-->
+<!--                </items>-->
+<!--            </MenuButton>-->
+<!--            <TextField fx:id="tf_search_food" layoutX="407.0" layoutY="30.0" promptText="음식점명, 관광지 분류, 등등" />-->
+<!--            <Button fx:id="btn_search_food" layoutX="334.0" layoutY="30.0" mnemonicParsing="false" onAction="#view_search_food" text="검색" />-->
+<!--      <ScrollPane layoutY="77.0" prefHeight="399.0" prefWidth="624.0">-->
+<!--         <content>-->
+<!--                  <TableView fx:id="tv_information_food" prefHeight="384.0" prefWidth="624.0">-->
+<!--                      <columns>-->
+<!--                          <TableColumn fx:id="tc_food_name" prefWidth="99.20001220703125" text="상호명" />-->
+<!--                          <TableColumn fx:id="tc_food_address" prefWidth="137.80001831054688" text="주소" />-->
+<!--                          <TableColumn fx:id="tc_food_category" prefWidth="110.19998168945312" text="대표 음식" />-->
+<!--                          <TableColumn fx:id="tc_food_score" minWidth="0.0" prefWidth="60.0" text="평점" />-->
+<!--                  <TableColumn fx:id="tc_food_review" prefWidth="201.5999755859375" text="리뷰" />-->
+<!--                      </columns>-->
+<!--                  </TableView>-->
+<!--         </content>-->
+<!--      </ScrollPane>-->
+<!--        </children>-->
+<!--</AnchorPane>-->
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="444.0" prefWidth="634.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Information_Food">
+    <children>
+        <ComboBox fx:id="cb_food_Do" layoutX="14.0" layoutY="12.0" prefHeight="26.0" prefWidth="93.0" promptText="도 선택">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <String fx:value="경기도" />
+                    <String fx:value="강원도" />
+                    <String fx:value="충청도" />
+                    <String fx:value="경상도" />
+                    <String fx:value="전라도" />
+                </FXCollections>
+            </items>
+        </ComboBox>
+        <ComboBox fx:id="cb_food_Si" layoutX="117.0" layoutY="12.0" prefHeight="26.0" prefWidth="93.0" promptText="시 선택" />
+        <TextField fx:id="tf_search_food" layoutX="407.0" layoutY="16.0" promptText="음식점명, 관광지명" />
+        <Button fx:id="btn_search_food" layoutX="576.0" layoutY="16.0" mnemonicParsing="false" onAction="#view_search_food" text="검색" />
+        <ScrollPane layoutX="2.0" layoutY="51.0" prefHeight="258.0" prefWidth="632.0">
+            <content>
+                <TableView fx:id="tv_information_food" onMouseClicked="#handleFoodTableMouseClicked" prefHeight="279.0" prefWidth="630.0">
+                    <columns>
+                        <TableColumn fx:id="tc_food_name" prefWidth="154.39996641874313" text="상호명" />
+                        <TableColumn fx:id="tc_food_address" prefWidth="268.8000030517578" text="주소" />
+                        <TableColumn fx:id="tc_food_category" prefWidth="128.79998779296875" text="대표 음식" />
+                        <TableColumn fx:id="tc_food_score" minWidth="0.0" prefWidth="73.60002441406255" text="평점" />
+                    </columns>
+                </TableView>
+            </content>
+        </ScrollPane>
+        <AnchorPane layoutX="10.0" layoutY="369.0" prefHeight="68.0" prefWidth="606.0">
+            <children>
+                <TableView fx:id="tv_selected_review" layoutX="-4.0" layoutY="-54.0" prefHeight="106.0" prefWidth="626.0">
+                    <columns>
+                        <TableColumn fx:id="tc_food_review_nickname" prefWidth="97.59997844696045" text="닉네임" />
+                        <TableColumn fx:id="tc_food_review_rate" prefWidth="55.20001220703125" text="평점" />
+                        <TableColumn fx:id="tc_food_review" prefWidth="472.00002136230466" text="리뷰" />
+                    </columns>
+                </TableView>
+            </children>
+        </AnchorPane>
+    </children>
 
 </AnchorPane>
