--- a/src/main/resources/creative_project/Memo.fxml
+++ b/src/main/resources/creative_project/Memo.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,8 +14,8 @@
 
     <children>
         <Label layoutX="276.0" layoutY="18.0" text="일정 관리" />
-        <DatePicker fx:id="dp_go" layoutX="146.0" layoutY="274.0" prefHeight="22.0" prefWidth="114.0" promptText="날짜 검색" />
-        <DatePicker fx:id="dp_back" layoutX="146.0" layoutY="303.0" prefHeight="22.0" prefWidth="114.0" promptText="날짜 검색" />
+        <DatePicker fx:id="dp_go" layoutX="118.0" layoutY="272.0" prefHeight="22.0" prefWidth="114.0" promptText="날짜 검색" />
+        <DatePicker fx:id="dp_back" layoutX="118.0" layoutY="301.0" prefHeight="22.0" prefWidth="114.0" promptText="날짜 검색" />
         <TableView fx:id="tv_memo" layoutX="63.0" layoutY="47.0" prefHeight="211.0" prefWidth="477.0">
             <columns>
                 <TableColumn fx:id="tc_go" prefWidth="87.20001220703125" text="출발날짜" />
@@ -24,16 +25,24 @@
                 <TableColumn fx:id="tc_memo_memo" prefWidth="127.4000244140625" text="메모" />
             </columns>
         </TableView>
-        <Label layoutX="91.0" layoutY="279.0" text="출발날짜" />
-        <Label layoutX="91.0" layoutY="307.0" text="도착날짜" />
-        <Label layoutX="97.0" layoutY="336.0" text="관광지" />
-        <TextField fx:id="tf_memo_playland" layoutX="145.0" layoutY="331.0" prefHeight="22.0" prefWidth="114.0" />
-        <TextField fx:id="tf_memo_food" layoutX="145.0" layoutY="360.0" prefHeight="22.0" prefWidth="114.0" />
-        <Label layoutX="97.0" layoutY="365.0" text="음식점" />
-        <Label layoutX="289.0" layoutY="321.0" text="메모" />
-        <TextArea fx:id="ta_memo_memo" layoutX="321.0" layoutY="273.0" prefHeight="107.0" prefWidth="162.0" />
-        <Button fx:id="btn_memo_add" layoutX="498.0" layoutY="325.0" mnemonicParsing="false" onAction="#add_memo" text="추가" />
-        <Button fx:id="btn_menu_remove" layoutX="498.0" layoutY="355.0" mnemonicParsing="false" onAction="#remove_memo" text="삭제" />
+        <Label layoutX="63.0" layoutY="276.0" text="출발날짜" />
+        <Label layoutX="63.0" layoutY="305.0" text="도착날짜" />
+        <Label layoutX="63.0" layoutY="335.0" text="관광지" />
+        <TextField fx:id="tf_memo_playland" layoutX="118.0" layoutY="331.0" prefHeight="22.0" prefWidth="114.0" />
+        <TextField fx:id="tf_memo_food" layoutX="118.0" layoutY="360.0" prefHeight="22.0" prefWidth="114.0" />
+        <Label layoutX="63.0" layoutY="364.0" text="음식점" />
+        <Label layoutX="243.0" layoutY="342.0" text="메모" />
+        <TextArea fx:id="ta_memo_memo" layoutX="272.0" layoutY="329.0" prefHeight="54.0" prefWidth="211.0" />
+        <Button fx:id="btn_memo_add" layoutX="498.0" layoutY="328.0" mnemonicParsing="false" onAction="#add_memo" text="추가" />
+        <Button fx:id="btn_menu_remove" layoutX="498.0" layoutY="358.0" mnemonicParsing="false" onAction="#remove_memo" text="삭제" />
+      <ComboBox layoutX="272.0" layoutY="301.0" prefHeight="22.0" prefWidth="40.0" />
+      <ComboBox layoutX="272.0" layoutY="272.0" prefHeight="22.0" prefWidth="48.0" />
+      <Label layoutX="249.0" layoutY="276.0" text="시" />
+      <Label layoutX="249.0" layoutY="305.0" text="시" />
+      <Label layoutX="337.0" layoutY="276.0" text="분" />
+      <Label layoutX="337.0" layoutY="305.0" text="분" />
+      <ComboBox layoutX="359.0" layoutY="301.0" prefHeight="22.0" prefWidth="48.0" />
+      <ComboBox layoutX="359.0" layoutY="272.0" prefHeight="22.0" prefWidth="48.0" />
     </children>
 
 </AnchorPane>
