--- a/src/main/resources/creative_project/Information_Food.fxml
+++ b/src/main/resources/creative_project/Information_Food.fxml
@@ -11,7 +11,8 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="444.0" prefWidth="634.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Information_Food">
+<?import javafx.scene.shape.Line?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="444.0" prefWidth="982.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Information_Food">
         <children>
             <ComboBox fx:id="cb_information_Do" layoutX="14.0" layoutY="12.0" prefHeight="26.0" prefWidth="93.0" promptText="도 선택">
                 <items>
@@ -48,6 +49,17 @@
                     </TableView>
                 </children>
             </AnchorPane>
+
+            <TableView layoutX="655.0" layoutY="51.0" prefHeight="380.0" prefWidth="320.0">
+                <columns>
+                    <TableColumn text="날짜" />
+                    <TableColumn text="날씨상태" />
+                    <TableColumn text="최저기온(℃)" />
+                    <TableColumn text="최고기온(℃)" />
+                </columns>
+            </TableView>
+            <Line endX="-100.0" endY="443.0000305175781" layoutX="745.0" layoutY="1.0" startX="-100.0" stroke="#9e9e9e" strokeLineCap="ROUND" strokeWidth="3.0" />
+
         </children>
 
 </AnchorPane>
