각 클래스에 시+도 선택 추가 정보 수정 및 추가 클래스에 주소 입력 필드 상세히 분류 추가 요청 및 수정 요청에서 추가/수정 버튼 입력시 해당 페이지로 연결

--- a/src/main/resources/creative_project/Manager_AddRequireList.fxml
+++ b/src/main/resources/creative_project/Manager_AddRequireList.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"  prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Manager_AddRequireList">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Manager_AddRequireList">
     <children>
-        <TabPane layoutX="31.0" layoutY="23.0" prefHeight="297.0" prefWidth="542.0" tabClosingPolicy="UNAVAILABLE">
+        <TabPane fx:id="tp_add_requireList" layoutX="31.0" layoutY="23.0" prefHeight="297.0" prefWidth="542.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
                 <Tab fx:id="tb_touristSpot_require" text="관광지">
                     <content>
@@ -41,6 +41,6 @@
                 </Tab>
             </tabs>
         </TabPane>
-        <Button fx:id="bt_require_allow" layoutX="510.0" layoutY="346.0" mnemonicParsing="false" text="추가" />
+        <Button fx:id="bt_require_allow" layoutX="510.0" layoutY="346.0" mnemonicParsing="false" onAction="#add_require" text="추가" />
     </children>
 </AnchorPane>
