--- a/src/main/resources/creative_project/Add_Review.fxml
+++ b/src/main/resources/creative_project/Add_Review.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -11,6 +9,9 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="457.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Add_Review">
 
     <children>
@@ -51,15 +52,17 @@
         <Label layoutX="187.0" layoutY="331.0" text="후기" />
         <TextArea fx:id="ta_use_review" layoutX="217.0" layoutY="330.0" prefHeight="87.0" prefWidth="157.0" />
         <Button fx:id="btn_add_use_list" layoutX="384.0" layoutY="393.0" mnemonicParsing="false" onAction="#add_use_list" prefHeight="22.0" prefWidth="48.0" text="등록" />
-      <MenuButton fx:id="mb_score" layoutX="217.0" layoutY="299.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="69.0" text="선택">
-        <items>
-          <MenuItem fx:id="menu_1" mnemonicParsing="false" onAction="#add_1" text="1점" />
-          <MenuItem fx:id="menu_2" mnemonicParsing="false" onAction="#add_2" text="2점" />
-            <MenuItem fx:id="menu_3" mnemonicParsing="false" onAction="#add_3" text="3점" />
-            <MenuItem fx:id="menu_4" mnemonicParsing="false" onAction="#add_4" text="4점" />
-            <MenuItem fx:id="menu_5" mnemonicParsing="false" onAction="#add_5" text="5점" />
-        </items>
-      </MenuButton>
+        <ComboBox fx:id="cb_score" layoutX="221.0" layoutY="299.0" prefHeight="26.0" prefWidth="75.0" promptText="선택">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <String fx:value="1점" />
+                    <String fx:value="2점" />
+                    <String fx:value="3점" />
+                    <String fx:value="4점" />
+                    <String fx:value="5점" />
+                </FXCollections>
+            </items>
+        </ComboBox>
 
 
     </children>
