--- a/src/main/resources/creative_project/Information_Food.fxml
+++ b/src/main/resources/creative_project/Information_Food.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,18 +12,30 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="405.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Information_Food">
         <children>
-            <MenuButton fx:id="mb_information_Do" layoutX="11.0" layoutY="30.0" mnemonicParsing="false" text="도 선택">
+            <ComboBox fx:id="cb_information_Do" layoutX="14.0" layoutY="30.0" onAction="#select_Do" prefHeight="26.0" prefWidth="93.0" promptText="도 선택">
                 <items>
-                    <MenuItem mnemonicParsing="false" text="경상북도" />
-                    <MenuItem mnemonicParsing="false" text="전라남도" />
+                    <FXCollections fx:factory="observableArrayList">
+                        <String fx:value="경기도" />
+                        <String fx:value="강원도" />
+                        <String fx:value="충청북도" />
+                        <String fx:value="충청남도" />
+                        <String fx:value="경상북도" />
+                        <String fx:value="경상남도" />
+                        <String fx:value="전라북도" />
+                        <String fx:value="전라남도" />
+                        <String fx:value="부산광역시" />
+                        <String fx:value="광주광역시" />
+                        <String fx:value="대구광역시" />
+                        <String fx:value="인천광역시" />
+                        <String fx:value="대전광역시" />
+                        <String fx:value="울산광역시" />
+                        <String fx:value="세종특별자치시" />
+                        <String fx:value="제주특별자치도" />
+                        <String fx:value="서울특별시" />
+                    </FXCollections>
                 </items>
-            </MenuButton>
-            <MenuButton fx:id="mb_information_Si" layoutX="96.0" layoutY="30.0" mnemonicParsing="false" text="시 선택">
-                <items>
-                    <MenuItem mnemonicParsing="false" text="대구시" />
-                    <MenuItem mnemonicParsing="false" text="남원시" />
-                </items>
-            </MenuButton>
+            </ComboBox>
+            <ComboBox fx:id="cb_information_Si" layoutX="119.0" layoutY="31.0" prefHeight="26.0" prefWidth="93.0" promptText="시 선택" />
             <TextField fx:id="tf_search_food" layoutX="407.0" layoutY="30.0" promptText="음식점명, 관광지 분류, 등등" />
             <Button fx:id="btn_search_food" layoutX="576.0" layoutY="30.0" mnemonicParsing="false" onAction="#view_search_food" text="검색" />
       <ScrollPane layoutY="77.0" prefHeight="399.0" prefWidth="624.0">
