--- a/src/main/resources/creative_project/Information_Playland.fxml
+++ b/src/main/resources/creative_project/Information_Playland.fxml
@@ -12,14 +12,26 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="405.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Information_Playland">
     <children>
-        <ComboBox fx:id="cb_information_Do" layoutX="14.0" layoutY="30.0" prefHeight="26.0" prefWidth="93.0" promptText="도 선택">
+        <ComboBox fx:id="cb_information_Do" layoutX="14.0" layoutY="30.0" onAction="#select_Do" prefHeight="26.0" prefWidth="93.0" promptText="도 선택">
             <items>
                 <FXCollections fx:factory="observableArrayList">
                     <String fx:value="경기도" />
                     <String fx:value="강원도" />
-                    <String fx:value="충청도" />
-                    <String fx:value="경상도" />
-                    <String fx:value="전라도" />
+                    <String fx:value="충청북도" />
+                    <String fx:value="충청남도" />
+                    <String fx:value="경상북도" />
+                    <String fx:value="경상남도" />
+                    <String fx:value="전라북도" />
+                    <String fx:value="전라남도" />
+                    <String fx:value="부산광역시" />
+                    <String fx:value="광주광역시" />
+                    <String fx:value="대구광역시" />
+                    <String fx:value="인천광역시" />
+                    <String fx:value="대전광역시" />
+                    <String fx:value="울산광역시" />
+                    <String fx:value="세종특별자치시" />
+                    <String fx:value="제주특별자치도" />
+                    <String fx:value="서울특별시" />
                 </FXCollections>
             </items>
         </ComboBox>
