--- a/src/main/resources/creative_project/Manager_AddTouristSpot.fxml
+++ b/src/main/resources/creative_project/Manager_AddTouristSpot.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -8,26 +11,56 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"  prefHeight="600.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Manager_AddTouristSpot">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="615.0" prefWidth="676.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Manager_AddTouristSpot">
     <children>
         <Pane layoutX="-71.0" layoutY="35.0" prefHeight="565.0" prefWidth="747.0">
             <children>
-                <TableView fx:id="tv_touristSpotList" layoutX="113.0" prefHeight="338.0" prefWidth="604.0">
+                <TableView layoutX="113.0" layoutY="14.0" prefHeight="338.0" prefWidth="604.0">
                     <columns>
                         <TableColumn fx:id="tc_touristSpotName" prefWidth="99.20001220703125" text="관광지 이름" />
-                        <TableColumn fx:id="tc_touristSpotAddress" prefWidth="121.0" text="주소" />
-                        <TableColumn fx:id="tc_touristSpotCategory" prefWidth="382.5" text="관광지 분류" />
+                        <TableColumn fx:id="tc_touristSpotAddress" prefWidth="341.0" text="주소" />
+                        <TableColumn fx:id="tc_touristSpotCategory" prefWidth="162.5" text="관광지 분류" />
                     </columns>
                 </TableView>
-                <TextField fx:id="tf_touristSpotName" layoutX="202.0" layoutY="370.0" prefHeight="26.0" prefWidth="294.0" />
+                <TextField fx:id="tf_touristSpotName" layoutX="202.0" layoutY="370.0" prefHeight="26.0" prefWidth="341.0" />
                 <Label layoutX="124.0" layoutY="374.0" text="관광지 이름" />
-                <TextField fx:id="tf_touristSpotAddress" layoutX="202.0" layoutY="407.0" prefHeight="26.0" prefWidth="294.0" />
-                <Label layoutX="124.0" layoutY="411.0" text="주소" />
-                <Label layoutX="124.0" layoutY="447.0" text="관광지 분류" />
-                <TextField fx:id="tf_touristSpotCategory" layoutX="202.0" layoutY="443.0" prefHeight="26.0" prefWidth="294.0" />
-                <Button fx:id="bt_touristSpot_register" layoutX="453.0" layoutY="505.0" mnemonicParsing="false" text="등록" />
+                <TextField fx:id="tf_touristSpotAddress_Do" layoutX="202.0" layoutY="407.0" prefHeight="26.0" prefWidth="121.0" />
+                <Label layoutX="124.0" layoutY="411.0" text="도" />
+                <Label layoutX="124.0" layoutY="478.0" text="관광지 분류" />
+                <TextField fx:id="tf_touristSpotCategory" layoutX="202.0" layoutY="474.0" prefHeight="26.0" prefWidth="341.0" />
+                <Button fx:id="bt_touristSpot_register" layoutX="493.0" layoutY="525.0" mnemonicParsing="false" text="등록" />
+                <Label layoutX="349.0" layoutY="411.0" text="시" />
+                <TextField fx:id="tf_touristSpotAddress_Si" layoutX="404.0" layoutY="407.0" prefHeight="26.0" prefWidth="139.0" />
+                <Label layoutX="124.0" layoutY="446.0" text="도로명" />
+                <TextField fx:id="tf_touristSpotAddress_roadName" layoutX="202.0" layoutY="441.0" prefHeight="26.0" prefWidth="121.0" />
+                <Label layoutX="343.0" layoutY="446.0" text="도로번호" />
+                <TextField fx:id="tf_touristSpotAddress_roadNumber" layoutX="404.0" layoutY="441.0" prefHeight="26.0" prefWidth="139.0" />
             </children>
         </Pane>
+        <ComboBox fx:id="cb_select_Do" layoutX="45.0" layoutY="14.0" onAction="#select_Do" prefHeight="26.0" prefWidth="121.0" promptText="도 선택">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <String fx:value="경기도" />
+                    <String fx:value="강원도" />
+                    <String fx:value="충청북도" />
+                    <String fx:value="충청남도" />
+                    <String fx:value="경상북도" />
+                    <String fx:value="경상남도" />
+                    <String fx:value="전라북도" />
+                    <String fx:value="전라남도" />
+                    <String fx:value="부산광역시" />
+                    <String fx:value="광주광역시" />
+                    <String fx:value="대구광역시" />
+                    <String fx:value="인천광역시" />
+                    <String fx:value="대전광역시" />
+                    <String fx:value="울산광역시" />
+                    <String fx:value="세종특별자치시" />
+                    <String fx:value="제주특별자치도" />
+                    <String fx:value="서울특별시" />
+                </FXCollections>
+            </items>
+        </ComboBox>
+        <ComboBox fx:id="cb_select_Si" layoutX="177.0" layoutY="14.0" onAction="#select_Si" prefHeight="26.0" prefWidth="121.0" promptText="시 선택" />
     </children>
 
 </AnchorPane>
