--- a/src/main/resources/creative_project/Manager_ModifyRequireList.fxml
+++ b/src/main/resources/creative_project/Manager_ModifyRequireList.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane  maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Manager_ModifyRequireList">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Manager_ModifyRequireList">
     <children>
-        <TabPane layoutX="31.0" layoutY="23.0" prefHeight="297.0" prefWidth="542.0" tabClosingPolicy="UNAVAILABLE">
+        <TabPane fx:id="tp_requireList" layoutX="31.0" layoutY="23.0" prefHeight="297.0" prefWidth="542.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
                 <Tab fx:id="tp_modify_touristSpotList" text="관광지">
                     <content>
@@ -41,7 +41,7 @@
                 </Tab>
             </tabs>
         </TabPane>
-        <Button fx:id="bt_remove" layoutX="530.0" layoutY="346.0" mnemonicParsing="false" text="삭제" />
-      <Button fx:id="bt_modify" layoutX="469.0" layoutY="346.0" mnemonicParsing="false" text="수정" />
+        <Button fx:id="bt_remove" layoutX="530.0" layoutY="346.0" mnemonicParsing="false" onAction="#remove_require" text="삭제" />
+      <Button fx:id="bt_modify" layoutX="469.0" layoutY="346.0" mnemonicParsing="false" onAction="#modify_require" text="수정" />
     </children>
 </AnchorPane>
