--- a/src/main/resources/creative_project/Require_Add.fxml
+++ b/src/main/resources/creative_project/Require_Add.fxml
@@ -2,13 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="508.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Require_Add">
 
     <children>
@@ -21,25 +22,39 @@
         <Label layoutX="130.0" layoutY="215.0" text="추천이유" />
         <TextArea fx:id="ta_require" layoutX="204.0" layoutY="214.0" prefHeight="128.0" prefWidth="190.0" promptText="맛있었던 음식, 외관, 분위기 등등 자유롭게 작성해주세요. " />
         <Button fx:id="btn_add_list" layoutX="346.0" layoutY="351.0" mnemonicParsing="false" onAction="#add_require_list" prefHeight="22.0" prefWidth="48.0" text="등록" />
-      <MenuButton fx:id="mb_choose_list" layoutX="204.0" layoutY="86.0" mnemonicParsing="false" text="선택">
-        <items>
-          <MenuItem fx:id="menu_playland_list" mnemonicParsing="false" onAction="#choose_playland_list" text="관광지" />
-          <MenuItem fx:id="menu_food_list" mnemonicParsing="false" onAction="#choose_food_list" text="맛집" />
-        </items>
-      </MenuButton>
+        <ComboBox fx:id="cb_choose_list" layoutX="204.0" layoutY="86.0" prefHeight="26.0" prefWidth="87.0" promptText="등록">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <String fx:value="관광지" />
+                    <String fx:value="맛집" />
+                </FXCollections>
+            </items>
+        </ComboBox>
       <Label layoutX="137.0" layoutY="157.0" text="주소" />
-      <MenuButton fx:id="mb_choose_Do" layoutX="205.0" layoutY="152.0" mnemonicParsing="false" onAction="#choose_Do" text="도">
-         <items>
-            <MenuItem mnemonicParsing="false" text="경상북도" />
-            <MenuItem mnemonicParsing="false" text="전라남도" />
-         </items>
-      </MenuButton>
-      <MenuButton fx:id="mb_choose_Si" layoutX="205.0" layoutY="175.0" mnemonicParsing="false" onAction="#choose_Si" text="시">
-         <items>
-            <MenuItem mnemonicParsing="false" text="대구시" />
-            <MenuItem mnemonicParsing="false" text="남원시" />
-         </items>
-      </MenuButton>
+        <ComboBox fx:id="cb_choose_Do" layoutX="205.0" layoutY="152.0" prefHeight="26.0" prefWidth="93.0" promptText="시">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <String fx:value="경기도" />
+                    <String fx:value="강원도" />
+                    <String fx:value="충청북도" />
+                    <String fx:value="충청남도" />
+                    <String fx:value="경상북도" />
+                    <String fx:value="경상남도" />
+                    <String fx:value="전라북도" />
+                    <String fx:value="전라남도" />
+                    <String fx:value="부산광역시" />
+                    <String fx:value="광주광역시" />
+                    <String fx:value="대구광역시" />
+                    <String fx:value="인천광역시" />
+                    <String fx:value="대전광역시" />
+                    <String fx:value="울산광역시" />
+                    <String fx:value="세종특별자치시" />
+                    <String fx:value="제주특별자치도" />
+                    <String fx:value="서울특별시" />
+                </FXCollections>
+            </items>
+        </ComboBox>
+        <ComboBox fx:id="cb_choose_Si" layoutX="205.0" layoutY="182.0" prefHeight="26.0" prefWidth="93.0" promptText="도" />
       <Label layoutX="113.0" layoutY="123.0" text="상호(관광지)명" />
       <TextField fx:id="tf_nameOf_there" layoutX="204.0" layoutY="119.0" prefHeight="22.0" prefWidth="125.0" />
     </children>
