--- a/src/main/resources/creative_project/Manager_ModifyRestaurant.fxml
+++ b/src/main/resources/creative_project/Manager_ModifyRestaurant.fxml
@@ -15,7 +15,7 @@
     <children>
         <Pane layoutX="-71.0" layoutY="35.0" prefHeight="565.0" prefWidth="747.0">
             <children>
-                <TableView layoutX="113.0" layoutY="14.0" prefHeight="338.0" prefWidth="604.0">
+                <TableView fx:id="tc_information_food" onMouseClicked="#handleFoodTableMouseClicked2" layoutX="113.0" layoutY="14.0" prefHeight="338.0" prefWidth="604.0">
                     <columns>
                         <TableColumn fx:id="tc_restaurantName" prefWidth="99.20001220703125" text="상호명" />
                         <TableColumn fx:id="tc_restaurantAddress" prefWidth="341.0" text="주소" />
@@ -28,7 +28,7 @@
                 <Label layoutX="124.0" layoutY="411.0" text="도" />
                 <Label layoutX="124.0" layoutY="478.0" text="음식점 분류" />
                 <TextField fx:id="tf_restaurantCategory" layoutX="202.0" layoutY="474.0" prefHeight="26.0" prefWidth="341.0" />
-                <Button fx:id="bt_restaurant_modify" layoutX="474.0" layoutY="525.0" mnemonicParsing="false" text="수정" />
+                <Button fx:id="bt_restaurant_modify" onAction="#handleModifyFood" layoutX="474.0" layoutY="525.0" mnemonicParsing="false" text="수정" />
                 <Label layoutX="349.0" layoutY="411.0" text="시" />
                 <TextField fx:id="tf_restaurantAddress_Si" layoutX="404.0" layoutY="407.0" prefHeight="26.0" prefWidth="139.0" />
                 <Label layoutX="124.0" layoutY="446.0" text="도로명" />
