--- a/src/main/resources/creative_project/Require_Modify.fxml
+++ b/src/main/resources/creative_project/Require_Modify.fxml
@@ -1,32 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="449.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Require_Modify">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="610.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Require_Modify">
     <children>
-        <Label layoutX="107.0" layoutY="67.0" text="맛집 / 관광지 정보 변경 및 삭제 요청">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <Label layoutX="111.0" layoutY="121.0" text="분류" />
-        <Label layoutX="99.0" layoutY="153.0" text="요청정보" />
-        <TextArea fx:id="ta_require" layoutX="163.0" layoutY="153.0" prefHeight="145.0" prefWidth="170.0" promptText="맛집,관광지 별 변경된 사항(위치,영업유무,등등)을 말씀해주세요" />
-        <Button fx:id="btn_add_require" layoutX="293.0" layoutY="312.0" mnemonicParsing="false" onAction="#add_require" text="등록" />
-        <ComboBox fx:id="cb_choose" layoutX="163.0" layoutY="117.0" prefHeight="26.0" prefWidth="76.0" promptText="선택">
+        <ComboBox fx:id="cb_Do" layoutX="84.0" layoutY="60.0" onAction="#setSiInfo" prefHeight="16.0" prefWidth="93.0" promptText="도 선택">
             <items>
                 <FXCollections fx:factory="observableArrayList">
-                    <String fx:value="관광지" />
-                    <String fx:value="맛집" />
+                    <String fx:value="경기도" />
+                    <String fx:value="강원도" />
+                    <String fx:value="충청북도" />
+                    <String fx:value="충청남도" />
+                    <String fx:value="경상북도" />
+                    <String fx:value="경상남도" />
+                    <String fx:value="전라북도" />
+                    <String fx:value="전라남도" />
+                    <String fx:value="부산광역시" />
+                    <String fx:value="광주광역시" />
+                    <String fx:value="대구광역시" />
+                    <String fx:value="인천광역시" />
+                    <String fx:value="대전광역시" />
+                    <String fx:value="울산광역시" />
+                    <String fx:value="세종특별자치시" />
+                    <String fx:value="제주특별자치도" />
+                    <String fx:value="서울특별시" />
                 </FXCollections>
             </items>
         </ComboBox>
+        <ComboBox fx:id="cb_Si" layoutX="186.0" layoutY="60.0" prefHeight="22.0" prefWidth="93.0" promptText="시 선택" />
+
+
+        <TabPane layoutX="84.0" layoutY="88.0" prefHeight="210.0" prefWidth="446.0" tabClosingPolicy="UNAVAILABLE">
+
+            <tabs>
+                <Tab fx:id="tab_playland" text="관광지">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="227.0" prefWidth="446.0">
+                            <children>
+                                <TableView fx:id="tv_resultView_playland" layoutY="3.0" onMouseClicked="#handleSelection" prefHeight="176.0" prefWidth="446.0">
+                                    <columns>
+                                        <TableColumn fx:id="tc_playland_name" prefWidth="124.79998779296875" text="관광지명" />
+                                        <TableColumn fx:id="tc_plaland_address" prefWidth="319.99998474121094" text="주소" />
+                                        <TableColumn fx:id="tc_playLand_id" prefWidth="124.79998779296875" />
+                                    </columns>
+                                </TableView>
+                            </children></AnchorPane>
+                    </content>
+                </Tab>
+                <Tab fx:id="tab_food" text="음식점">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                            <children>
+                                <TableView fx:id="tv_resultView_food" onMouseClicked="#handleSelection" prefHeight="176.0" prefWidth="446.0">
+                                    <columns>
+                                        <TableColumn fx:id="tc_food_name" prefWidth="124.79998779296875" text="음식점명" />
+                                        <TableColumn fx:id="tc_food_address" prefWidth="320.7999725341797" text="주소" />
+                                        <TableColumn fx:id="tc_food_id" prefWidth="320.7999725341797" />
+                                    </columns>
+                                </TableView>
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </Tab>
+            </tabs>
+        </TabPane>
+        <Button fx:id="btn_add" layoutX="482.0" layoutY="378.0" mnemonicParsing="false" onAction="#add_request" prefHeight="22.0" prefWidth="48.0" text="등록" />
+        <TextField fx:id="tf_name" layoutX="357.0" layoutY="60.0" prefHeight="22.0" prefWidth="116.0" promptText="관광지,음식점" />
+        <Button fx:id="btn_search" layoutX="481.0" layoutY="60.0" mnemonicParsing="false" onAction="#view_result_search" prefHeight="22.0" prefWidth="48.0" text="검색" />
+      <CheckBox fx:id="cb_modify" layoutX="84.0" layoutY="298.0" mnemonicParsing="false" text="수정" />
+      <CheckBox fx:id="cb_delete" layoutX="140.0" layoutY="298.0" mnemonicParsing="false" text="삭제" />
+      <TextField fx:id="tf_content" layoutX="82.0" layoutY="325.0" prefHeight="75.0" prefWidth="394.0" promptText="요청 이유를 작성해주세요" />
+      <Label layoutX="140.0" layoutY="14.0" prefHeight="37.0" prefWidth="475.0" text="음식점/관광지 수정 및 삭제 요청">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
     </children>
 </Pane>
